# TOMLConfig

./: CMakeLists.txt  LICENCE
cmake/: installConfig.cmake.in  install_targets.cmake
include/TOMLConfig/: IResource.h
src/: IResource.cpp
src/resource/: IResource.h  NodeResource.cpp  NodeResource.h  NullResource.cpp  NullResource.h  ResourceException.h  ResourceType.h
src/utils/: static_ptr.h
tests/: CMakeLists.txt
tests/mocks/: MockResource.h
tests/resources/: basic.toml
tests/src/: GlobalTest.cpp  GlobalTest.h  NullResourceTest.cpp  NullResourceTest.h
tests/src/resource/: NodeResourceTest.cpp  NodeResourceTest.h  NullResourceTest.cpp  NullResourceTest.h
